cambios en el nombre y agregado el email

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="banner_content">
             <div id="cabecera">
                 <img src="img/perfil.jpg" alt=" Mi foto del foto-perfil" class="perfil">
-                <h2>Hola, Mi Nombre es: <span class="nombre">Nestor Acho Huayhua</span></h2>
+                <h2>Hola, Mi Nombre es: <br><span class="nombre">Nestor Acho Huayhua</span></h2>
             </div>
             <div class="text-titulo">
                 <h1 class="titulo">Soy </br><span class="typed"></span></h1>
@@ -55,7 +55,7 @@
                    <h2 id="Acerca-de">Sobre Mi</h2>
                     <p>Soy <span> Nestor Acho Huayhua</span>, tengo <script> var l= new Date().getFullYear();  res=l-2001; document.write(res)</script> años, estudio la carrera de Ingenieria de Sistemas.<br> Soy una persona  responsable, un joven autodidacta con gran pasión por el desarrollo de software y movil. Soy capaz de adaptarme a cualquier necesidad y dar siempre lo mejor de mí en cualquier proyecto.
                     </p>
-                    <p>GMAIL: nestoracho78@gmail.com</p>
+                    <p style="color: #0dd3fb;">MI GMAIL ES: nestoracho78@gmail.com</p>
                     <div class="boton"><a download="NestorAcho" href="./doc/CurriculumNestor.pdf" target="_blank">Descargar CV</a></div>                    
                 </article>
                 <article>
